Changes to ESP since NWCHem release 3.0 (TPS)

Oct 06	Initial Electrostatic Potential (ESP) module
	Current Features of the FIT:
		a) Fit on grid points (cf CHELPG)
		b) Constraints on total charge of atom groups
		c) Restraints (cf RESP)

Oct 09	Added USES_BLAS=esp_denmat

Apr 21 1998	print under util_print contol
         	put fitted charges onto rtdb

Apr 27 1998	defaults without esp input block
                move probe/factor to esp_rtdbin

Jun 15 1998     print probe radius and atom radius factor
Jun 16 1998     change default factor to 2.0

Aug 08 1998     destroy geometries on rtdb before storing new

Aug 13 1998	bug fixes, extr printout

Aug 18 1998	changes in memory allocation

Aug 21 1998	destroy geometry object in esp_dalloc

Aug 24 1998     change 1. into one

Dec 23 1998	Modified logic in esp calculation
		Removed replicated density and potential arrays
		Added Schwarz screening
		Added option to read in previous esp grid

Dec 28 1998	Use 24 as lfn for lfngrd
		Precalculate grid size before memory allocation
		Remove unnecessary ga_get in esp_denmat.F